--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,9 @@
 {
-    "name": "nezimi/my-error",
-    "description": "php error and exception",
+    "name": "nezimi/zero-error",
+    "description": "dealing with php error and exception",
+    "homepage": "https://github.com/PengYilong/zero-error",
     "require": {
-		"php": ">=5.6"
+		"php": ">=7.1.0"
     },
     "authors": [
         {
@@ -13,7 +14,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Nezimi\\": "src/"
+            "zero\\": "src/"
         }
     }
 }
